resources/sass/_forms.scss
// Forms
form{
    small{
        color: red;
    }
}
.form-control{
    border-color: $primary;
    background: $background-lighten-1;
    color: $primary-text;
    &:focus{
        background: $background;
        color: $primary-text;
    }
    &[readonly], &[disabled]{
        background: $background-lighten-2;
        &:focus{
            box-shadow: none;
        }
    }
}
.custom-control-input{
    &:checked ~ .custom-control-label::before{
        color: $primary-text;
    }
    &:not(:disabled):active ~ .custom-control-label::before{
        background-color: $background-lighten-3;
    }
    &:disabled ~ .custom-control-label::before,
    &[disabled] ~ .custom-control-label::before,{
        background-color: $background-lighten-3;
    }
}
.custom-control-label::before{
    background-color: $background-lighten-1;
    border: $primary solid 1px;
}
.custom-file.custom-file-dark{
    .custom-file-label{
        background-color: $background-lighten-2;
        border-color: $background-lighten-2;
        color: $primary-text;
        &::after{
            content: "Открыть";
            background-color: $background-lighten-3;
            color: $primary-text;
        }
    }
    .custom-file-input{
        cursor: pointer;
        &[required] + .custom-file-label{
            border-color: $primary;
        }
    }
}

